--- a/config.html
+++ b/config.html
@@ -84,6 +84,68 @@
         let bolinhaAtual = null;
         const API_URL = "https://script.google.com/macros/s/AKfycbzL2zXBQFJq1oTUbP2jZeOvpKqJnD4NI1b_dx8vhTTD_Omp9TolsP9-CyH8db-btd7mow/exec";
 
+        async function carregarDados() {
+            try {
+                console.log("🔄 Buscando dados da API...");
+                const response = await fetch(API_URL);
+                const data = await response.json();
+                console.log("✅ Dados recebidos:", data);
+
+                let quadras = new Set();
+                let lotes = {};
+                let tabela = document.getElementById("tabela-lotes");
+
+                tabela.innerHTML = "";
+
+                data.forEach(lote => {
+                    let { quadra, loteNum, status, x, y } = lote;
+
+                    if (quadra && loteNum) {
+                        quadras.add(quadra);
+                        if (!lotes[quadra]) lotes[quadra] = [];
+                        lotes[quadra].push(loteNum);
+                    }
+
+                    // Adicionar à tabela
+                    let row = tabela.insertRow();
+                    row.insertCell(0).textContent = quadra;
+                    row.insertCell(1).textContent = loteNum;
+                    row.insertCell(2).textContent = status;
+                });
+
+                let quadraSelect = document.getElementById("quadra");
+                let loteSelect = document.getElementById("lote");
+
+                quadraSelect.innerHTML = "";
+                loteSelect.innerHTML = "";
+
+                quadras.forEach(quadra => {
+                    let option = document.createElement("option");
+                    option.value = quadra;
+                    option.textContent = quadra;
+                    quadraSelect.appendChild(option);
+                });
+
+                quadraSelect.addEventListener("change", function() {
+                    loteSelect.innerHTML = "";
+                    let quadraSelecionada = quadraSelect.value;
+                    if (lotes[quadraSelecionada]) {
+                        lotes[quadraSelecionada].forEach(lote => {
+                            let option = document.createElement("option");
+                            option.value = lote;
+                            option.textContent = lote;
+                            loteSelect.appendChild(option);
+                        });
+                    }
+                });
+
+                quadraSelect.dispatchEvent(new Event("change"));
+            } catch (error) {
+                console.error("❌ Erro ao carregar dados:", error);
+                alert("Erro ao carregar os dados da planilha.");
+            }
+        }
+
         function criarBolinha() {
             let mapa = document.getElementById("mapa-container");
             let bolinha = document.createElement("div");
@@ -131,6 +193,7 @@
             .then(data => {
                 console.log("✅ Salvo com sucesso:", data);
                 alert("Coordenadas salvas!");
+                carregarDados(); // Atualiza a tabela automaticamente
             })
             .catch(error => {
                 console.error("❌ Erro ao salvar:", error);
@@ -144,6 +207,9 @@
                 bolinhaAtual = null;
             }
         }
+
+        // Carregar dados ao iniciar
+        carregarDados();
     </script>
 
 </body>
